syntax = "proto3";

package signal;

service Signal {
  rpc GetBookTickers(BookTickerReq) returns (BookTickerResp) {}
}

message BookTickerReq {
  EXCHANGE exchange = 1;
  repeated string pairs = 2;
}

message BookTickerResp {
  map<string, PairBookTickers> data = 1;
}

message PairBookTicker {
  MarginType margin_type = 1;
  uint64 timestamp = 2;
  float bid = 3;
  float ask = 4;
}

message PairBookTickers {
  repeated PairBookTicker tickers = 1;
}

enum MarginType {
  SPOT = 0;
  USDT_MARGIN = 1;
  COIN_MARGIN = 2;
}

enum EXCHANGE {
  BINANCE = 0;
}